feat(deployment): implement environment validation script (Phase 3, Tasks 3.17-3.19)
- Update .env.production.example with all required variables including JWT_SECRET_KEY
- Fix MinIO credential requirements (20 chars min for access key, 40 for secret)
- Create comprehensive scripts/validate-env.sh with:
  - Required variable validation
  - Secret strength checking (length and patterns)
  - Example/placeholder value detection
  - Format validation (URLs, emails, domains, base64)
  - Security checks (unique keys, HTTPS, SSL/TLS)
  - Colored output with clear error messages
  - Exit codes for CI/CD integration
- Add explicit .env.production entry to .gitignore with security warning
- Create deployment/environment-validation.md documentation
- HIPAA-compliant validation ensuring strong secrets and proper encryption

Implements Phase 3, Step 4 of CI/CD Implementation Plan
Provides production-ready environment validation for secure deployment

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ dist-ssr/
 .env
 .env.*
 !.env.example
+!.env.production.example  # Template is safe to commit
+.env.production           # CRITICAL: Production secrets - NEVER commit
 backend/.env
 backend/.env.*
 !backend/.env.example
