--- a/.env.production.example
+++ b/.env.production.example
@@ -25,11 +25,11 @@ REDIS_PASSWORD=CHANGE_ME_GENERATE_RANDOM_32_CHARS
 # =============================================================================
 # MinIO/S3 Configuration
 # =============================================================================
-# Generate access key: openssl rand -base64 16 | tr -d '/+=' | cut -c1-16
-S3_ACCESS_KEY=CHANGE_ME_16CHARS
+# Generate access key: openssl rand -base64 16 | tr -d '/+=' | cut -c1-20
+S3_ACCESS_KEY=CHANGE_ME_20CHARS_MIN
 
-# Generate secret key: openssl rand -base64 32 | tr -d '/+=' | cut -c1-32
-S3_SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_32_CHARS
+# Generate secret key: openssl rand -base64 32 | tr -d '/+=' | cut -c1-40
+S3_SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_40_CHARS
 
 # S3 bucket configuration
 S3_BUCKET_NAME=pazpaz-attachments
@@ -44,6 +44,10 @@ MINIO_ENCRYPTION_KEY=CHANGE_ME_BASE64_32_BYTES
 # =============================================================================
 # Generate secret key: openssl rand -base64 64
 SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_64_CHARS
+
+# JWT secret key for token signing
+# Generate: openssl rand -base64 32
+JWT_SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_32_CHARS
 
 # PHI encryption master key (base64 encoded 32 bytes)
 # Generate: python -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
