fix(ci): resolve infrastructure CI validation errors
- Add dummy hosts to /etc/hosts for nginx upstream validation
  nginx.conf references Docker service names (api, frontend, minio) that
  don't exist in CI environment, causing validation failures

- Update validate-env.sh to accept file path as argument
  Script now accepts optional first argument for environment file path
  Defaults to .env.production if no argument provided
  Allows CI to validate .env.test instead of production file

These minimal changes fix both CI validation errors without modifying
the actual infrastructure files.

--- a/.github/workflows/infrastructure-ci.yml
+++ b/.github/workflows/infrastructure-ci.yml
@@ -332,6 +332,16 @@ jobs:
             -out /etc/letsencrypt/live/example.com/fullchain.pem \
             -subj "/CN=test"
 
+      - name: Add dummy hosts for upstream validation
+        run: |
+          echo "📝 Adding dummy hosts for nginx upstream validation..."
+          # nginx.conf references these Docker service names as upstreams
+          # Add them to /etc/hosts so nginx can resolve them during validation
+          echo "127.0.0.1 api" | sudo tee -a /etc/hosts
+          echo "127.0.0.1 frontend" | sudo tee -a /etc/hosts
+          echo "127.0.0.1 minio" | sudo tee -a /etc/hosts
+          echo "✅ Dummy hosts added for CI validation"
+
       - name: Validate nginx.conf syntax
         run: |
           echo "🔍 Validating nginx.conf..."
