fix(ci): install Docker Compose in Docker Build Test job
The Docker Build Test job was failing because docker-compose command was not available.
Added installation step to ensure Docker Compose is available for validation.

--- a/.github/workflows/infrastructure-ci.yml
+++ b/.github/workflows/infrastructure-ci.yml
@@ -885,6 +885,13 @@ jobs:
           driver-opts: |
             image=moby/buildkit:latest
 
+      - name: Install Docker Compose
+        run: |
+          echo "📦 Installing Docker Compose v${DOCKER_COMPOSE_VERSION}..."
+          sudo curl -L "https://github.com/docker/compose/releases/download/v${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
+
       - name: Create test .env file
         run: |
           echo "📝 Creating test .env file for build..."
