fix(ci): load Docker image into daemon after buildx build
Added --load flag to docker buildx build command to ensure the built image
is available in the local Docker daemon for subsequent steps that need to inspect it.

--- a/.github/workflows/infrastructure-ci.yml
+++ b/.github/workflows/infrastructure-ci.yml
@@ -946,6 +946,7 @@ jobs:
             --cache-to type=gha,mode=max \
             --tag pazpaz/nginx:test \
             --file nginx/Dockerfile \
+            --load \
             nginx/
 
       - name: Test Docker Compose build (dry run)
