fix(workflows): resolve remaining YAML syntax errors
Fix critical issues preventing workflows from running:

1. secret-rotation-reminder.yml:
   - Changed issue body from template literal with backticks to array.join()
   - Avoids nested backtick parsing errors in GitHub Actions script context
   - Template now generates valid markdown with code blocks

2. deploy-production.yml:
   - Changed if conditions to use vars instead of secrets
   - GitHub Actions doesn't allow secrets in if expressions
   - Now uses: vars.ENABLE_SLACK_NOTIFICATIONS and vars.ENABLE_SENTRY_RELEASES
   - Steps will be skipped if variables are not set to 'true'

3. Updated github-cd-secrets.md:
   - Added Repository Variables section
   - Documented ENABLE_SLACK_NOTIFICATIONS variable
   - Documented ENABLE_SENTRY_RELEASES variable
   - Instructions for setting these in repository settings

Users must now set repository variables to enable optional features:
- Settings → Secrets and variables → Actions → Variables
- Add ENABLE_SLACK_NOTIFICATIONS=true for Slack notifications
- Add ENABLE_SENTRY_RELEASES=true for Sentry release tracking

All workflows now pass YAML validation.

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -575,7 +575,7 @@ jobs:
           fi
 
       - name: Send Slack notification
-        if: secrets.SLACK_WEBHOOK_URL != ''
+        if: vars.ENABLE_SLACK_NOTIFICATIONS == 'true'
         continue-on-error: true
         run: |
           PAYLOAD=$(cat << EOF
@@ -623,7 +623,7 @@ jobs:
             "${{ secrets.SLACK_WEBHOOK_URL }}"
 
       - name: Create Sentry release
-        if: needs.deploy.result == 'success' && secrets.SENTRY_AUTH_TOKEN != ''
+        if: needs.deploy.result == 'success' && vars.ENABLE_SENTRY_RELEASES == 'true'
         continue-on-error: true
         run: |
           # Install Sentry CLI
