--- a/.github/workflows/secret-rotation-reminder.yml
+++ b/.github/workflows/secret-rotation-reminder.yml
@@ -68,43 +68,45 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 title: `🔐 Secret Rotation Required - ${date}`,
-                body: `## Secret Rotation Alert
-
-Some secrets are approaching or have exceeded their rotation deadline.
-
-### Action Required
-1. Review the secret rotation status
-2. Run secret rotation for overdue/warning secrets
-3. Update GitHub Secrets after rotation
-4. Verify all services are functioning correctly
-
-### Rotation Commands
-
-**Rotate all secrets:**
-\`\`\`bash
-./scripts/rotate-secrets.sh --all
-\`\`\`
-
-**Rotate specific secrets:**
-\`\`\`bash
-./scripts/rotate-secrets.sh --postgres
-./scripts/rotate-secrets.sh --redis
-./scripts/rotate-secrets.sh --s3
-./scripts/rotate-secrets.sh --jwt
-\`\`\`
-
-### Important Notes
-- Always test in staging first
-- Schedule rotation during maintenance window
-- Never rotate ENCRYPTION_MASTER_KEY or MINIO_ENCRYPTION_KEY
-
-### References
-- [Secret Rotation Schedule](docs/deployment/secrets-rotation-schedule.md)
-- [Rotation Script](scripts/rotate-secrets.sh)
-- [Check Secret Age](scripts/check-secret-age.sh)
-
----
-*This issue was automatically created by the Secret Rotation Reminder workflow.*`,
+                body: [
+                  '## Secret Rotation Alert',
+                  '',
+                  'Some secrets are approaching or have exceeded their rotation deadline.',
+                  '',
+                  '### Action Required',
+                  '1. Review the secret rotation status',
+                  '2. Run secret rotation for overdue/warning secrets',
+                  '3. Update GitHub Secrets after rotation',
+                  '4. Verify all services are functioning correctly',
+                  '',
+                  '### Rotation Commands',
+                  '',
+                  '**Rotate all secrets:**',
+                  '```bash',
+                  './scripts/rotate-secrets.sh --all',
+                  '```',
+                  '',
+                  '**Rotate specific secrets:**',
+                  '```bash',
+                  './scripts/rotate-secrets.sh --postgres',
+                  './scripts/rotate-secrets.sh --redis',
+                  './scripts/rotate-secrets.sh --s3',
+                  './scripts/rotate-secrets.sh --jwt',
+                  '```',
+                  '',
+                  '### Important Notes',
+                  '- Always test in staging first',
+                  '- Schedule rotation during maintenance window',
+                  '- Never rotate ENCRYPTION_MASTER_KEY or MINIO_ENCRYPTION_KEY',
+                  '',
+                  '### References',
+                  '- [Secret Rotation Schedule](docs/deployment/secrets-rotation-schedule.md)',
+                  '- [Rotation Script](scripts/rotate-secrets.sh)',
+                  '- [Check Secret Age](scripts/check-secret-age.sh)',
+                  '',
+                  '---',
+                  '*This issue was automatically created by the Secret Rotation Reminder workflow.*'
+                ].join('\n'),
                 labels: ['security', 'secret-rotation', 'operations', 'priority-high']
               });
 
