fix(ci): add deployments write permission to production workflow
Add required GitHub Actions permissions for environment deployments:
- deployments: write - Required for creating deployment records
- actions: read - Required for workflow_run trigger context
- contents: read - Required for checking out code

This fixes the "Resource not accessible by integration" error that
occurred when the workflow tried to create deployments to protected
environments.

Related to auto-deployment setup with approval gates.

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -77,6 +77,12 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'  # Semantic versioning tags (v1.2.3)
 
+# Permissions required for deployments and environment protection
+permissions:
+  contents: read
+  deployments: write
+  actions: read
+
 env:
   DEPLOYMENT_DIR: /opt/pazpaz
   SCRIPTS_DIR: /opt/pazpaz/scripts
