fix(ci): rebuild cache with mode=min to fix corrupted Oct 25 cache
Problem: GHA cache with mode=max was so aggressive it cached build
output from Oct 25, even after source code changed.

Solution:
1. Bypass corrupted cache (comment cache-from)
2. Rebuild fresh and save new cache with mode=min
3. Next commit: re-enable cache-from for fast builds

mode=min vs mode=max:
- mode=max: Caches EVERYTHING (including build output) ❌
- mode=min: Only caches base layers (deps, OS) ✅

This gives us both speed AND reliability:
- Dependencies cached (~30s)
- Code always rebuilds (~60s)
- Total: ~90s per deploy

Refs #single-click-calendar

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -433,8 +433,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # TEMPORARY: Bypass corrupted cache from Oct 25
+          # cache-from: type=gha
+          cache-to: type=gha,mode=min  # Rebuild cache with only base layers
           build-args: |
             BUILDKIT_INLINE_CACHE=1
 
