--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -165,10 +165,23 @@ http {
     limit_conn_status 429;
 
     # =============================================================================
-    # UPSTREAM DEFINITIONS
+    # UPSTREAM DEFINITIONS with Dynamic DNS Resolution
     # =============================================================================
+    #
+    # Docker's internal DNS server for service discovery
+    # This ensures nginx re-resolves container IPs when they change during deployment
+    # Docker DNS is always at 127.0.0.11 with a 5-second TTL by default
+    #
+    # IMPORTANT: We set valid=5s to force frequent DNS re-resolution (every 5 seconds)
+    # This ensures nginx picks up new container IPs quickly after deployment
+    # The ipv6=off prevents IPv6 resolution issues in Docker
+    resolver 127.0.0.11 valid=5s ipv6=off;
+    resolver_timeout 5s;
 
     # Backend API upstream
+    # NOTE: Without nginx Plus, upstream doesn't support dynamic DNS resolution
+    # DNS is resolved at nginx startup/reload only
+    # However, the deployment script now reloads nginx after recreating containers
     upstream backend_api {
         least_conn;
         server api:8000 max_fails=3 fail_timeout=30s;
