fix(nginx): remove duplicate resolver directive
The nginx config had two resolver directives which caused startup failures:
1. Line 178: Docker DNS resolver for container service discovery
2. Line 218: Public DNS resolver for OCSP stapling

Removed the duplicate at line 218. The Docker DNS resolver (127.0.0.11)
is sufficient for both container DNS resolution and OCSP stapling.

--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -215,8 +215,8 @@ http {
     # OCSP stapling configuration
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 1.1.1.1 valid=300s;
-    resolver_timeout 5s;
+    # Note: resolver is already defined above for Docker DNS (line 178)
+    # Removed duplicate resolver directive to fix nginx startup issue
 
     # =============================================================================
     # HTTP SERVER (Port 80 - Redirects to HTTPS)
