fix(ci): add explicit logging and error handling to deployment
Issues Fixed:
- Containers were not being recreated during deployment (silent failure)
- No visibility into deployment steps
- Errors were not caught or reported

Changes:
- Removed --quiet from docker pull (show pull progress)
- Added echo statements for each deployment step
- Added error handling around container recreation (|| { exit 1 })
- Added 'docker compose ps' to verify containers recreated
- Added 2>&1 to capture both stdout and stderr
- Added final success message

This ensures deployment failures are caught and visible in CI logs.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -482,9 +482,21 @@ jobs:
             cd /opt/pazpaz
             export IMAGE_TAG=latest
 
-            docker compose --env-file .env.production -f docker-compose.prod.yml pull --quiet api arq-worker
+            echo "📥 Pulling latest Docker images..."
+            docker compose --env-file .env.production -f docker-compose.prod.yml pull api arq-worker
+
+            echo "🔄 Running database migrations..."
             docker compose --env-file .env.production -f docker-compose.prod.yml run --rm api uv run python -m alembic upgrade head
-            docker compose --env-file .env.production -f docker-compose.prod.yml up -d --force-recreate --pull always api arq-worker
+
+            echo "🔄 Recreating containers with new images..."
+            docker compose --env-file .env.production -f docker-compose.prod.yml up -d --force-recreate --pull always api arq-worker 2>&1 || {
+              echo "❌ Failed to recreate containers"
+              docker compose --env-file .env.production -f docker-compose.prod.yml logs api arq-worker --tail=50
+              exit 1
+            }
+
+            echo "✅ Containers recreated, verifying status..."
+            docker compose --env-file .env.production -f docker-compose.prod.yml ps api arq-worker
 
             sleep 10
 
@@ -494,7 +506,10 @@ jobs:
               exit 1
             fi
 
+            echo "🔄 Reloading nginx configuration..."
             docker compose --env-file .env.production -f docker-compose.prod.yml exec -T nginx nginx -s reload
+
+            echo "✅ Deployment completed successfully"
           ENDSSH
 
       - name: Verify deployment
